--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Fisica</h1>
-              <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+              <p class="lead">La física es una ciencia que estudia sistemáticamente los fenómenos naturales, tratando de encontrar las leyes básicas que los rigen. Utiliza las matemáticas como su lenguaje y combina estudios teóricos con experimentales para obtener las leyes correctas.</p>
 
               <form id="formulario">
                 <label for="distancia">Distancia</label>
@@ -62,10 +62,45 @@
           </div>
           <script>
             function Calcular(){
-                const distancia= parseFloat(document.getElementById('distancia').value);
+                //Obtener valores del formulario
 
-                console.log("La distancia es:  "+ distancia);
-                document.getElementById('velocidad').textContent=velocidad.toFixed(2) + ' ' + distancia;
+                const distancia= parseFloat(document.getElementById('distancia').value);
+                const tiempo= parseFloat(document.getElementById('tiempo').value);
+                const distanciaUnidad= parseFloat(document.getElementById('distanciaUnidad').value);
+                const tiempoUnidad= parseFloat(document.getElementById('tiempoUnidad').value);
+                const velocidadUnidad= parseFloat(document.getElementById('velocidadUnidad').value);
+
+
+                //Convertir Unidades a Sistema Metrico(SI)
+                let distanciaSI = 0;
+                let tiempoSI = 0;
+                if (distanciaUnidad==='metros'){
+                    distanciaSI = distancia;
+                }
+                else if (distanciaUnidad==='pies'){
+                    distanciaSI = distancia / 3.281;
+                }
+
+                if (tiempoUnidad==='segundos'){
+                    tiempoSI=tiempo;
+                }
+                else if (tiempoUnidad==='horas'){
+                    tiempoSI=tiempo*3600;
+                }
+
+                //Calcular la velocidad, aceleracion y rapidez
+                let velocidad = 0;
+                let aceleracion = 0;
+                let rapidez = 0;
+                if (velocidadUnidad==='metros_por_segundo'){
+                    velocidad = distanciaSI / tiempoSI;
+                    rapidez = velocidad
+                    aceleracion = velocidad/tiempoSI
+                }
+                else if (velocidadUnidad==='pies_por_segundo'){
+
+                }
+
             }
             
           </script>
