--- a/apimovies.html
+++ b/apimovies.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" &quot; integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <title>Inicio</title>
 </head>
@@ -30,7 +28,7 @@
                     <li>
                         <a href="contacto.html">Contacto</a>
                     </li>
-                    <li class="activate">
+                    <li>
                         <a href="apimovies.html">Movies</a>
                     </li>
 
@@ -38,7 +36,38 @@
             </div>
         </nav>
     </div>
+        <h1>PELICULAS</h1>
     </script>
+    <div class="container">
+        <h1>LA PAGINA DE FERNANDA RAMIREZ CRUZ</h1>
+        <form id="form">
+            <input type="text" id="search" placeholder="Busca la pelicula...">
+            <input type="submit" value="Search">
+        </form>
+        <section id="main" class="apimovies"></section>
+    </div>
+
+    <script>
+        const API_URL='https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc&api_key=3fd2be6f0c70a2a598f084ddfb75487c&page=1&#39'
+        const IMG_PATH='http://image.tmdb.org/t/p/w1280&#39'
+        const SEARCH_API='https://api.themoviedb.org/3/search/movie?api_key=3fd2be6f0c70a2a598f084ddfb75487c&query="&#39'
+
+        const main = document.getElementById('main');
+        const form = document.getElementById('form');
+        const search = document.getElementById('search');
+
+        getMovies(API_URL);
+
+        function showMovies(movies){
+            main.innerHTML='';
+            movies.forEach(movies)=>{
+                const { tittle, poster_path, vote_average, overview, release_date}=movie;
+                const movieEL = document.createElement('div');
+            }
+        }
+
+    </script>
+
     <div id="footer"></div>
     <script>
       $(function(){
