--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" &quot; integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link href="https://fonts.cdnfonts.com/css/speakeasy" rel="stylesheet">
+                
+                
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <title>Inicio</title>
+    <title>B T S</title>
 </head>
 <body>
     <div style="margin: 24px;">
-        <nav class="navbar navbar-light" style="background-color: rgb(197, 231, 165);">
+        <nav class="navbar navbar-light" style="background-color: rgb(118, 255, 255);">
             <div class="container">
+                <a class="navbar-brand"style="color: blue;" href="index.html">Inicio</a>
                 <ul class="nav navbar-nav">
-                    <li>
-                        <li class="active">
-                        <a href="index.html">Inicio</a>
-                    </li>
                     <li>
                         <a href="menu.html">Menu</a>
                     </li>
@@ -38,7 +38,44 @@
             </div>
         </nav>
     </div>
-    </script>
+    <style>
+        body{
+            background-color: black;
+            color:white;
+            font-family: 'SF Speakeasy', sans-serif;
+        }
+        div{
+            position: relative;
+        }
+        video{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .titulo{
+            background: black;
+            font-size: 150px;
+            text-align:center ;
+            font-weight: 200;
+            mix-blend-mode: multiply;
+        }
+        </style>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <video autoplay muted preload loop>
+                    <source src="menu\bts.mp4" type="video/mp4">
+                </video>
+                <h1 class="titulo">BIENVENIDOS</h1>
+                <p class="lead"></p>
+            </div>
+        </div>
+
+
+
+
     <div id="footer"></div>
     <script>
       $(function(){
