--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <video autoplay muted preload loop>
-                    <source src="menu\bts.mp4" type="video/mp4">
+                    <source src="playlist.mp4" type="video/mp4">
                 </video>
                 <h1 class="titulo">BIENVENIDOS</h1>
                 <p class="lead"></p>
