--- a/movie1.html
+++ b/movie1.html
@@ -121,30 +121,31 @@
         getMovies(API_URL);
 
         async function getMovies(url){
-            const res=await fetch(url);
-            const data=await res.json();
-            showMovies(data.result);
+        const res=await fetch(url);
+        const data=await res.json();
+        showMovies(data.results);
         }
 
         function showMovies(movies){
             main.innerHTML='';
             movies.forEach((movies) => {
-                const { tittle, poster_path, vote_average, overview, release_date}= movie;
+                const { tittle, poster_path, vote_average, overview, release_date} = movie;
                 const movieEL = document.createElement('div');
 
                 movieEL.classList.add('movie');
                 movieEL.innerHTML = `
                 <img src="${IMG_PATH + poster_path}" alt = "${title}">
                 <div class = "movie-info">
-                    <h3>${tittle}
-                        <span class="${getClassByRate(vote_average)}">${vote_average}</div>
+                    <h3>${tittle}</h3>
+                        <span class="${getClassByRate(vote_average)}">${vote_average}</span>
+                        </div>
                 <div class="overview">
                     <h3> Overview </h3>
-                    ${Overview}
+                    ${overview}
                     <h3>Releases Date</h3>
-                    ${relase_date}</div> `;
-
-                main.appendChild{movieEL};
+                    ${relase_date}</div>
+                     `
+                main.appendChild(movieEL);
             }
         )};
 
@@ -170,10 +171,7 @@
             }else{
                 window.location.reload();
             }
-        })
+        });
     </script>
-
-
-    
 </body>
 </html>
