--- a/movie1.html
+++ b/movie1.html
@@ -17,7 +17,7 @@
                 <ul class="nav navbar-nav">
                     <li>
                         <li class="active">
-                        <a href="index.html">Inicio</a>
+                        <a href="index (1).html">Inicio</a>
                     </li>
                     <li>
                         <a href="menu.html">Menu</a>
@@ -29,77 +29,13 @@
                         <a href="contacto.html">Contacto</a>
                     </li>
                     <li>
-                        <a href="apimovies.html">Movies</a>
+                        <a href="movie1.html">Movies</a>
                     </li>
 
                 </ul>
             </div>
         </nav>
     </div>
-    <style>
-                    footer{
-                background-color:rgb(197, 231, 165);
-                color: #0d1810;
-                padding: 30px 0;
-            }
-            .container{
-                max-width: 800px;
-                margin: auto;
-                padding: 0 20px;
-
-            }
-            .footer-content{
-                display: flex;
-                flex-wrap: wrap;
-            }
-            .footer-section{
-                width: 100%;
-                padding: 20px;
-                box-sizing: border-box;
-            }
-            .about{
-                text-align: center;
-            }
-            .abouth2{
-                margin-bottom: 20px;
-            }
-            .about p{
-                font-size: 18px;
-                line-height: 1.5;
-                margin-bottom: 20px;
-            }
-            .contact-links{
-                display: flex;
-                justify-content: center;
-            }
-            .contact-links a{
-                display: inline-block;
-                color: #fff;
-                font-size: 24px;
-                margin: 0 10px;
-                transition: all 0.3 ease;
-                
-                transform: translateY(15px);
-
-            }
-    </style>
-
-    <footer>
-        <div class="container">
-            <div class=".footer-content">
-                <div class="footer-selection about">
-
-       <h2>Contactame</h2>
-       <p>Si estas interesado en contactarme, puedes hacerlo a traves de cualquiera de las siguientes redes sociales: </p>
-
-       <a href="http://fasebook.com/miperfil" target="_blank"><i class="fab fa-facebook"></i></a>
-       <a href="http://instagram.com/miperfil" target="_blank"><i class="fab fa-instagram"></i></a>
-       <a href="http://twitter.com/miperfil" target="_blank"><i class="fab fa-twitter"></i></a>
-       <a href="http://discord.com/miperfil" target="_blank"><i class="fab fa-discord"></i></a>
-       <a href="http://pinterest.com/miperfil" target="_blank"><i class="fab fa-pinterest"></i></a>
-       <a href="http://pinterest.com/miperfil" target="_blank"><i class="fab fa-pinterest"></i></a>
-    </footer>
-
     <div class="container">
         <h1>LA PAGINA DE FERNANDA RAMIREZ CRUZ</h1>
         <form id="form">
@@ -107,7 +43,96 @@
             <input type="submit" value="Search">
         </form>
         <section id="main" class="apimovies"></section>
+
     </div>
+    <style>
+        .container{
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+        h1{
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: 30px;
+        }
+        form{
+            display: flex;
+            justify-content: center;
+            margin-bottom: 50px;
+        }
+        input[type="text"]{
+            font-size: 1.2rem;
+            padding: 10px;
+            border-radius: 5px;
+            border: none;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+        input[type="submit"]{
+            font-size: 1.2rem;
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: none;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover{
+            border-color: aqua;
+            color: white;
+        }
+        .movies{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-gap: 20px;
+        }
+        .movie{
+            position: relative;
+        }
+        .movie img{
+            width: 100%;
+            height: auto;
+            border-radius: 15px;
+        }
+        .movie-info{
+            background-color: black;
+            color: white;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            text-align: center;
+        }
+        .movie:hover .movie-info{
+            opacity: 1;
+            border-radius: 15px;
+        }
+        .movie-info h3 {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+        .movie-info span{
+            font-size: 30px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .green{
+            color: rgb(78, 214, 146);
+        }
+        .orange{
+            color: rgb(224, 156, 74);
+        }
+        .red{
+            color: rgb(202, 56, 56);
+        }
+    </style>
 
     <script>
         const API_URL='https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc&api_key=3fd2be6f0c70a2a598f084ddfb75487c&page=1&#39';
@@ -173,5 +198,68 @@
             }
         });
     </script>
+
+<style>
+    footer{
+background-color:rgb(197, 231, 165);
+color: #0d1810;
+padding: 30px 0;
+}
+.container{
+max-width: 800px;
+margin: auto;
+padding: 0 20px;
+
+}
+.footer-content{
+display: flex;
+flex-wrap: wrap;
+}
+.footer-section{
+width: 100%;
+padding: 20px;
+box-sizing: border-box;
+}
+.about{
+text-align: center;
+}
+.abouth2{
+margin-bottom: 20px;
+}
+.about p{
+font-size: 18px;
+line-height: 1.5;
+margin-bottom: 20px;
+}
+.contact-links{
+display: flex;
+justify-content: center;
+}
+.contact-links a{
+display: inline-block;
+color: #fff;
+font-size: 24px;
+margin: 0 10px;
+transition: all 0.3 ease;
+
+transform: translateY(15px);
+
+}
+</style>
+
+<footer>
+<div class="container">
+<div class=".footer-content">
+<div class="footer-selection about">
+
+<h2>Contactame</h2>
+<p>Si estas interesado en contactarme, puedes hacerlo a traves de cualquiera de las siguientes redes sociales: </p>
+
+<a href="http://fasebook.com/miperfil" target="_blank"><i class="fab fa-facebook"></i></a>
+<a href="http://instagram.com/miperfil" target="_blank"><i class="fab fa-instagram"></i></a>
+<a href="http://twitter.com/miperfil" target="_blank"><i class="fab fa-twitter"></i></a>
+<a href="http://discord.com/miperfil" target="_blank"><i class="fab fa-discord"></i></a>
+<a href="http://pinterest.com/miperfil" target="_blank"><i class="fab fa-pinterest"></i></a>
+</footer>
 </body>
 </html>
